Customer transactions birth date cleaning First version of Tableau book

--- a/projects/customer_transactions/data-exploration.ipynb
+++ b/projects/customer_transactions/data-exploration.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
        "4    1983-11-17      ES            1         21.25  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,7 @@
        "4    1983-11-17      ES            1         21.25  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -413,13 +413,237 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Date of Birth"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Customer_ID</th>\n",
+       "      <th>Transaction_Date</th>\n",
+       "      <th>Date_of_Birth</th>\n",
+       "      <th>No_of_Scans</th>\n",
+       "      <th>Amount_Spent</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1.000000e+04</td>\n",
+       "      <td>10000</td>\n",
+       "      <td>3953</td>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>5.641979e+07</td>\n",
+       "      <td>2022-07-23 00:56:00.960000</td>\n",
+       "      <td>1981-02-14 19:10:23.830002432</td>\n",
+       "      <td>1.107500</td>\n",
+       "      <td>65.923188</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>3.374404e+07</td>\n",
+       "      <td>2022-01-02 00:00:00</td>\n",
+       "      <td>1778-05-09 00:00:00</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>4.499134e+07</td>\n",
+       "      <td>2022-04-29 00:00:00</td>\n",
+       "      <td>1973-12-17 00:00:00</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>24.970000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>6.074039e+07</td>\n",
+       "      <td>2022-07-28 00:00:00</td>\n",
+       "      <td>1980-03-25 00:00:00</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>46.870000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>6.812865e+07</td>\n",
+       "      <td>2022-10-29 00:00:00</td>\n",
+       "      <td>1988-10-30 00:00:00</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>82.935000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>7.456905e+07</td>\n",
+       "      <td>2022-12-31 00:00:00</td>\n",
+       "      <td>2022-10-30 00:00:00</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>2365.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>1.283985e+07</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.363809</td>\n",
+       "      <td>76.506243</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Customer_ID            Transaction_Date  \\\n",
+       "count  1.000000e+04                       10000   \n",
+       "mean   5.641979e+07  2022-07-23 00:56:00.960000   \n",
+       "min    3.374404e+07         2022-01-02 00:00:00   \n",
+       "25%    4.499134e+07         2022-04-29 00:00:00   \n",
+       "50%    6.074039e+07         2022-07-28 00:00:00   \n",
+       "75%    6.812865e+07         2022-10-29 00:00:00   \n",
+       "max    7.456905e+07         2022-12-31 00:00:00   \n",
+       "std    1.283985e+07                         NaN   \n",
+       "\n",
+       "                       Date_of_Birth   No_of_Scans  Amount_Spent  \n",
+       "count                           3953  10000.000000  10000.000000  \n",
+       "mean   1981-02-14 19:10:23.830002432      1.107500     65.923188  \n",
+       "min              1778-05-09 00:00:00      1.000000      0.000000  \n",
+       "25%              1973-12-17 00:00:00      1.000000     24.970000  \n",
+       "50%              1980-03-25 00:00:00      1.000000     46.870000  \n",
+       "75%              1988-10-30 00:00:00      1.000000     82.935000  \n",
+       "max              2022-10-30 00:00:00      8.000000   2365.000000  \n",
+       "std                              NaN      0.363809     76.506243  "
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_transactions.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Some date of birth are out of range (some people are born in 2022 and others in 1778).\n",
+    "\n",
+    "Let's keep only the people that were born between 1912 and 2008 (between 14 and 110 years old at the time of the transaction)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count                             3935\n",
+       "mean     1981-01-03 22:24:29.275730624\n",
+       "min                1942-11-24 00:00:00\n",
+       "25%                1973-12-09 00:00:00\n",
+       "50%                1980-03-02 00:00:00\n",
+       "75%                1988-08-20 00:00:00\n",
+       "max                2006-06-02 00:00:00\n",
+       "Name: Date_of_Birth, dtype: object"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import datetime as dt\n",
+    "\n",
+    "# Keep only the record without a birth date or with a valid birth date\n",
+    "df_transactions = df_transactions[\n",
+    "    (df_transactions[\"Date_of_Birth\"].isnull())\n",
+    "    | (\n",
+    "        (\n",
+    "            df_transactions[\"Date_of_Birth\"]\n",
+    "            >= dt.datetime(year=1912, month=1, day=1, hour=0, minute=0)\n",
+    "        )\n",
+    "        & (\n",
+    "            df_transactions[\"Date_of_Birth\"]\n",
+    "            <= dt.datetime(year=2008, month=1, day=1, hour=0, minute=0)\n",
+    "        )\n",
+    "    )\n",
+    "]\n",
+    "df_transactions[\"Date_of_Birth\"].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 9982 entries, 0 to 9999\n",
+      "Data columns (total 9 columns):\n",
+      " #   Column            Non-Null Count  Dtype         \n",
+      "---  ------            --------------  -----         \n",
+      " 0   Customer_ID       9982 non-null   int64         \n",
+      " 1   Transaction_Date  9982 non-null   datetime64[ns]\n",
+      " 2   Brand_Name        9982 non-null   object        \n",
+      " 3   Sector            9982 non-null   object        \n",
+      " 4   Gender            4207 non-null   object        \n",
+      " 5   Date_of_Birth     3935 non-null   datetime64[ns]\n",
+      " 6   Country           9313 non-null   object        \n",
+      " 7   No_of_Scans       9982 non-null   int64         \n",
+      " 8   Amount_Spent      9982 non-null   float64       \n",
+      "dtypes: datetime64[ns](2), float64(1), int64(2), object(4)\n",
+      "memory usage: 779.8+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_transactions.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Export to SQL DB\n",
     "Once the data frame is cleaned and ready for the SQL analysis (done in the `sql` folder), it is sent to a Postgresql database."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,16 +658,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "10000"
+       "9982"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,6 +692,23 @@
     "df_transactions.to_sql(\n",
     "    name=\"transactions\", index=False, con=engine, if_exists=\"replace\"\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Save cleaned data to CSV\n",
+    "Let's save the cleaned data to CSV to use it in Tableau"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_transactions.to_csv(\"dataset/cleaned_data_set.csv\", index=False)"
    ]
   }
  ],
