Cloud OPS pandas to csv change float format to avoid scientific notation

--- a/projects/cloud-ops/data_cleaning.ipynb
+++ b/projects/cloud-ops/data_cleaning.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
        "4               6.485370  "
       ]
      },
-     "execution_count": 208,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
        "4  11/8/2023           2.400000e-09  "
       ]
      },
-     "execution_count": 209,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
        "4  10/1/2023               0.000094  "
       ]
      },
-     "execution_count": 210,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +573,7 @@
        "4  11/1/2023              11.759549  "
       ]
      },
-     "execution_count": 211,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +661,7 @@
        "max                11.922231"
       ]
      },
-     "execution_count": 212,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -778,7 +778,7 @@
        "4          ANG    0.558659  2023-11-01T00:00:00"
       ]
      },
-     "execution_count": 214,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -863,7 +863,7 @@
        "4          ANG    0.558659  2023-10-01T00:00:00"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -875,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -901,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -967,7 +967,7 @@
        "3      UK      ID4        New"
       ]
      },
-     "execution_count": 217,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -980,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1079,7 +1079,7 @@
        "std                              NaN               7.475484"
       ]
      },
-     "execution_count": 219,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1090,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1110,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1148,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1295,7 +1295,7 @@
        "4               6.485370           11        2023     Legacy  "
       ]
      },
-     "execution_count": 222,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1314,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1393,7 +1393,7 @@
        "4          ANG    0.558659     11  2023"
       ]
      },
-     "execution_count": 223,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1406,7 +1406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1433,7 +1433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1480,7 +1480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1621,7 +1621,7 @@
        "4               6.485370     Legacy    0.141734  "
       ]
      },
-     "execution_count": 226,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1632,7 +1632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1726,7 +1726,7 @@
        "std                              NaN           3.231122e+00       0.240375"
       ]
      },
-     "execution_count": 227,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1737,7 +1737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1831,7 +1831,7 @@
        "std                              NaN           6.443609e-01       0.240375"
       ]
      },
-     "execution_count": 228,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1845,11 +1845,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "azure_merged_df.to_csv(\"dataset/azure_merged.csv\", index=False)"
+    "azure_merged_df.to_csv(\n",
+    "    \"dataset/azure_merged.csv\", index=False, float_format=\"%f\"\n",
+    ")"
    ]
   }
  ],
