Dialysis machines requirements.txt

--- a/projects/dialysis_machines/data-exploration.ipynb
+++ b/projects/dialysis_machines/data-exploration.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
        "4              None             0     0.780066  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
        "4   None             0     0.779009  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
        "4  Machine_5      Phoenix  Manufacturer_C  Model_Y"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +461,7 @@
       " 2   manufacturer  10 non-null     object\n",
       " 3   model         10 non-null     object\n",
       "dtypes: object(4)\n",
-      "memory usage: 452.0+ bytes\n"
+      "memory usage: 448.0+ bytes\n"
      ]
     }
    ],
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +564,7 @@
        "4          5  Machine_6 2023-09-21 09:46:28.706831  Part Replacement"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +596,7 @@
       " 2   date         100 non-null    datetime64[ns]\n",
       " 3   description  100 non-null    object        \n",
       "dtypes: datetime64[ns](1), int64(1), object(2)\n",
-      "memory usage: 3.3+ KB\n"
+      "memory usage: 3.2+ KB\n"
      ]
     }
    ],
@@ -614,7 +614,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "data_analysis",
+   "display_name": "fresenius",
    "language": "python",
    "name": "python3"
   },
@@ -628,7 +628,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
